# werewolf-py

./: LICENSE  README.md  log-to-readable-md.py  log.json  pyproject.toml
core/: api.py  game.py
prompts/: render_prompts.py
