[tool.poetry]
name = "werewolf"
version = "0.1.0"
description = ""
authors = ["Brenton  <26958105+bmoraida@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.10.0"
marshmallow = "^3.20.2"
setuptools = "^69.0.3"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
